# athabasca_recon

./: .gitignore  CHANGE_LOG.txt  CMakeLists.txt  README.md  athabasca_recon_manual.html  index.html  params.json
bonelab/: Array.hpp  CMakeLists.txt  DoubleBuffer.hpp  FFT_util.hpp  Image.hpp  Message.hpp  MessageQueue.cpp  MessageQueue.hpp  ObjectGroup.hpp  SynchronizeMessage.cpp  SynchronizeMessage.hpp  ThreadRunner.cpp  ThreadRunner.hpp  ThreadWorker.hpp  Tuple.hpp  endian.hpp  exception.hpp  fftw_mt.cpp  fftw_mt.hpp  fftw_templated.hpp  print_multithread.cpp  print_multithread.hpp  safe_stream_write.hpp  sysinfo.hpp  text.hpp  types.hpp  vDSP.hpp
bonelab/boost/: CMakeLists.txt  bonelab_boost-config.cmake.in
bonelab/boost/property_tree/: conf_parser.hpp  example.conf  util.hpp
bonelab/tests/: ArrayTests.cpp  CMakeLists.txt  DoubleBufferTests.cpp  FFT_util_Tests.cpp  ImageTests.cpp  TupleTests.cpp  conf_parser_Tests.cpp  endianTests.cpp  property_tree_util_Tests.cpp  textTests.cpp  typesTests.cpp
data/: README.txt  parallel_project.conf  parallel_project_decay.conf  parallel_project_offset.conf
doc/: Makefile  asciidoc-dblatex.sty  athabasca_recon_manual-docinfo.xml  athabasca_recon_manual.adoc  athabasca_recon_manual.txt  basic_geometry.dxf
doc/functions/: gaussian.py  plot_gaussian_freq_space.gle  plot_gaussian_real_space.gle  plot_tapered_cosine_window_freq_space.gle  plot_tapered_cosine_window_real_space.gle  tapered_cosine_window.py
doc/images/: plot_tapered_cosine_window_freq_space.eps  plot_tapered_cosine_window_real_space.eps
source/: AthabascaException.hpp  CMakeLists.txt  CTCalibration.hpp  CTCalibration.txx  ReconConfiguration.cpp  ReconConfiguration.hpp  ReconstructionLauncher.hpp  ReconstructionLauncher.txx  athabasca_recon.cpp  version.h
source/back_projection/: ParallelBackProjector.hpp  ParallelBackProjector_cpu.hpp  ParallelBackProjector_cpu.txx  PixelInterpolator.hpp  RayTracer.hpp
source/back_projection/tests/: CMakeLists.txt  ParallelBackProjectorTests.cpp  PixelInterpolatorTests.cpp  RayTracerTests.cpp
source/engines/: ReconstructionRunner.hpp  ReconstructionRunner.txx
source/engines/multi_threaded/: MultiThreadedReconstructionRunner.hpp  MultiThreadedReconstructionRunner.txx  ReconstructionMessages.hpp  ReconstructionMessages.txx  ReconstructionThreadWorker.hpp  ReconstructionThreadWorker.txx
source/engines/single_threaded/: SingleThreadedReconstructionRunner.hpp  SingleThreadedReconstructionRunner.txx
source/filtering/: GaussianFilter.cpp  GaussianFilter.hpp  ProjectionFilterer.hpp  ProjectionFilterer_Convolution.cpp  ProjectionFilterer_Convolution.hpp  ProjectionFilterer_fftw.cpp  ProjectionFilterer_fftw.hpp  ProjectionFilterer_vDSP.cpp  ProjectionFilterer_vDSP.hpp  RampFilterRealSpace.cpp  RampFilterRealSpace.hpp  SmoothingFilters.hpp  TaperedCosineWindowFilter.cpp  TaperedCosineWindowFilter.hpp  TransferFunction.hpp
source/filtering/tests/: CMakeLists.txt  GaussianFilterTests.cpp  ProjectionFiltererTestsTemplate.txx  ProjectionFilterer_ConvolutionTests.cpp  ProjectionFilterer_fftwTests.cpp  ProjectionFilterer_vDSPTests.cpp  RampFilterRealSpaceTests.cpp  TaperedCosineWindowFilterTests.cpp
source/io/: AnyFormatStreamingProjectionsReader.hpp  AnyFormatStreamingProjectionsReader.txx  AsynchronousIOProcessor.hpp  AsynchronousIOProcessor.txx  MetaImageReader.hpp  MetaImageReader.txx  MetaImageWriter.hpp  MetaImageWriter.txx  StreamingIOBase.hpp  StreamingMetaImageProjectionsReader.hpp  StreamingMetaImageProjectionsReader.txx  StreamingMetaImageWriter.hpp  StreamingMetaImageWriter.txx  StreamingProjectionsReader.hpp  StreamingRawProjectionsReader.hpp  StreamingRawProjectionsReader.txx  StreamingRawWriter.hpp  StreamingRawWriter.txx  StreamingWriter.hpp
source/projection_correction/: AttenuationCalculator.hpp  AttenuationCalculator.txx  BadPixelCorrector.hpp  BadPixelCorrector.txx  BeamPowerCorrector.hpp  BeamPowerCorrector.txx  BeamPowerCorrectors.hpp  BeforeAndAfterBrightFieldBeamPowerCorrector.hpp  BeforeAndAfterBrightFieldBeamPowerCorrector.txx  CMakeLists.txt  ConstantAttenuationBeamPowerCorrector.hpp  ConstantAttenuationBeamPowerCorrector.txx  ManualBeamPowerCorrector.hpp  ManualBeamPowerCorrector.txx  NeighborhoodWalker.hpp  NeighborhoodWalker.txx  NullProjectionEdgeBeamPowerCorrector.hpp  NullProjectionEdgeBeamPowerCorrector.txx
source/projection_correction/tests/: BadPixelCorrectorTests.cpp  BeforeAndAfterBrightFieldBeamPowerCorrectorTests.cpp  CMakeLists.txt  ConstantAttenuationBeamPowerCorrectorTests.cpp  ManualBeamPowerCorrectorTests.cpp  NeighborhoodWalkerTests.cpp  NullProjectionEdgeBeamPowerCorrectorTests.cpp
source/util/: LinearFit.cpp  LinearFit.hpp  Subvolumer.hpp  Subvolumer.txx
source/util/tests/: CMakeLists.txt  LinearFitTests.cpp  SubvolumerTests.cpp
tools/data_generation/: parallel_project.conf  parallel_project.py  parallel_project_big.conf  parallel_project_medium.conf  projections_big-bright.mhd  projections_big-bright.raw  projections_big-dark.mhd  projections_big-dark.raw  projections_big.mhd  projections_medium-bright.mhd  projections_medium-bright.raw  projections_medium-dark.mhd  projections_medium-dark.raw  projections_medium.mhd  synthetic_volume.mhd  volume_gen_2.py
tools/imagej/Align_Projections/: build.xml  plugins.config
tools/imagej/Align_Projections/src/: Align_Projections.java
tools/imagej/Align_Projections/src/net/sf/ij_plugins/io/metaimage/: MiEncoder.java
